[master] Completed web version.

--- a/YoutubeBatchDownloaderTest/YoutubeTableHtmlParserTest/ParseTableTest.html
+++ b/YoutubeBatchDownloaderTest/YoutubeTableHtmlParserTest/ParseTableTest.html
@@ -4,7 +4,7 @@
 
 
 
-        <tr class="pl-video yt-uix-tile " data-video-id="nDS-56QYIb4" data-title="Starcraft 2: Toby Sucks at Gaming - Part 1" data-set-video-id="">
+        <tr class="pl-video yt-uix-tile " data-video-id="nDS-56QYIb4" data-title="Starcraft1" data-set-video-id="">
             <td class="pl-video-handle "></td>
             <td class="pl-video-index"></td>
             <td class="pl-video-thumbnail">
@@ -65,7 +65,7 @@
 
 
 
-        <tr class="pl-video yt-uix-tile " data-video-id="ElwN1KP0EZk" data-title="Starcraft 2: Toby Sucks at Gaming - Part 2" data-set-video-id="">
+        <tr class="pl-video yt-uix-tile " data-video-id="ElwN1KP0EZk" data-title="Starcraft2" data-set-video-id="">
             <td class="pl-video-handle "></td>
             <td class="pl-video-index"></td>
             <td class="pl-video-thumbnail">
